# wazo-public

./: .gitignore  README.md
.github/workflows/: deploy.yml
ai-server/: .env.example  package-lock.json  package.json  tsconfig.json
ai-server/src/: index.ts
ai-server/src/controllers/: embeddings.ts
ai-server/src/routes/: ai.ts  embeddings.ts
backend/: .env.development  .env.production  backup_before_pgvector.sql  ecosystem.config.js  package-lock.json  package.json  vercel-build.sh
backend/.elasticbeanstalk/: config.yml
backend/data/: settings.json
backend/prisma/: db.sqlite  schema.prisma  seed.ts
backend/public/: asset-manifest.json  index.html
backend/scripts/: delete-all-notes.sql  delete-all-notes.ts  update-cors.sh
backend/src/: server.ts
cpp-backend/: CMakeLists.txt  README.md  wazo.db
cpp-backend/include/db/: database.hpp
cpp-backend/include/models/: note.hpp  notebook.hpp
cpp-backend/include/server/: server.hpp
cpp-backend/scripts/: build.sh  kill_port.sh  uninstall.sh
cpp-backend/src/: main.cpp
cpp-backend/src/db/: database.cpp
cpp-backend/src/models/: note.cpp  notebook.cpp
cpp-backend/src/server/: server.cpp
frontend/: .env.development  .env.production  README.md  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  config.ts  constants.ts  index.tsx  types.ts
project-page/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
project-page/server/: .env.example  package-lock.json  server.js
(+177 files in other folders)
